test/cli/sample-policy-exclusion/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test
policies:
- ivpol.yaml
- vpol.yaml
- mpol.yaml
resources:
- resource.yaml
results:
- isImageValidatingPolicy: true
  kind: Pod
  policy: ivpol-sample
  resources:
  - good-pod-excluded
  result: pass
- isValidatingPolicy: true
  kind: Deployment
  policy: check-deployment-namespace
  resources:
  - deployment-excluded
  result: pass
- isMutatingPolicy: true
  kind: Deployment
  policy: test-mpol-jsonpatch
  patchedResources: patchedResource.yaml
  resources:
  - dev-deploy-2
  result: pass
